# src/main/kotlin/uk/gov/justice/digital/hmpps/prisonercontactregistry/dto/Restriction.kt
@@ -5,18 +5,17 @@ import org.springframework.format.annotation.DateTimeFormat
 import java.time.LocalDate
 
 @Schema(description = "A contact for a prisoner")
-class RestrictionDto private constructor(
-  @Schema(description = "Restriction Code", example = "123", required = false) val restrictionType: String?,
+class Restriction private constructor(
+  @Schema(description = "Restriction Type Code", example = "123", required = false) val restrictionType: String?,
   @Schema(description = "Description of Restriction Type", example = "123", required = false) val restrictionTypeDescription: String?,
   @Schema(description = "Date from which the restriction applies", example = "2000-10-31", required = false) val startDate: LocalDate?,
   @Schema(description = "Restriction Expiry", example = "2000-10-31", required = false) val expiryDate: LocalDate?,
-  @Schema(description = "true if applied globally to the contact or false if applied in the context of a visit", required = false) val globalRestriction: Boolean = false,
-  @Schema(description = "Comment text", example = "123", required = false) val comment: String?
+  @Schema(description = "True if applied globally to the contact or False if applied in the context of a visit", required = false) val globalRestriction: Boolean = false,
+  @Schema(description = "Additional Information", example = "This is a comment text", required = false) val comment: String?
 ) {
 
   data class Builder(
-    // restriction ID ???
-    var restrictionType: String? = null, // enum
+    var restrictionType: String? = null,
     var restrictionTypeDescription: String? = null,
     var startDate: LocalDate? = null,
     var expiryDate: LocalDate? = null,
@@ -29,10 +28,6 @@ class RestrictionDto private constructor(
     fun expiryDate(@DateTimeFormat(iso = DateTimeFormat.ISO.DATE) expiryDate: LocalDate) = apply { this.expiryDate = expiryDate }
     fun globalRestriction(globalRestriction: Boolean) = apply { this.globalRestriction = globalRestriction }
     fun comment(comment: String) = apply { this.comment = comment }
-    fun build() = RestrictionDto(restrictionType, restrictionTypeDescription, startDate, expiryDate, globalRestriction, comment)
+    fun build() = Restriction(restrictionType, restrictionTypeDescription, startDate, expiryDate, globalRestriction, comment)
   }
 }
-
-// TODO: types
-// TODO: required
-// TODO: id
